# Polaris-Kernel

./: .gitignore  AGENTS.md  ARQUITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  SECURITY.md  llms.txt  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: pages.yml
docs/: ARQUITECTURE.md  GENERATED_ASSETS.md  project_structure.json  project_structure.jsonc
metadata/: MSC_00_a_08.json  MSC_00_a_08.tex  MSC_11_a_19.json  MSC_11_a_19.tex  MSC_20_a_28.json  MSC_20_a_28.tex  MSC_30_a_39.json  MSC_30_a_39.tex  MSC_40_a_49.json  MSC_40_a_49.tex  MSC_51_a_58.json  MSC_51_a_58.tex  MSC_60_a_68.json  MSC_60_a_68.tex  MSC_70_a_78.json  MSC_70_a_78.tex  MSC_80_a_86.json  MSC_80_a_86.tex  MSC_90_a_97.json  MSC_90_a_97.tex  MSC_frontmatter.tex  MSC_index.json  MSC_index_pillars_overlay.json  README.md
metadata/schemas/: content.schema.json  logic.schema.json  msc_taxonomy.schema.json  scripts.schema.json
scripts/: automate_image_linking.py  build.json  build.py  config.py  generate_assets.json  generate_assets.py  templates.json  templates.py  update_taxonomy_pillars.py
scripts/core/: encoding_validator.json  encoding_validator.py  error_handling.json  error_handling.py  formula_validator.json  formula_validator.py  (+3 more)
site_src/: index.html  scripts.js  style.css  styles.css  template_page.html
tests/: conftest.json  conftest.py  test_structure.json  test_structure.py  test_validators.json  test_validators.py
utils/: links.json  links.py  logging.json  logging.py  markdown.json  markdown.py  pathing.json  pathing.py
(+260 files in other folders)
